Fix the bug of decimal number overflowing the screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,7 @@ body {
 
 #result {
     flex: 1;
+    max-width: 136px;
 }
 
 .bars,
